--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,16 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/wall7">
+    android:background="@drawable/wall"
+    android:paddingTop="0dp">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:padding="30dp"
-        android:background="#82ffffff"
-        android:layout_marginTop="20dp">
+        android:padding="15dp"
+        android:background="#82fbf7f7"
+        android:layout_marginTop="59dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -21,24 +22,23 @@
             android:id="@+id/textView"
             android:phoneNumber="false"
             android:layout_gravity="center_horizontal"
-            android:textSize="@dimen/h1"
-            android:textStyle="bold|italic" />
+            android:textSize="@dimen/h1" />
 
         <ImageView
             android:layout_width="@dimen/logo"
             android:layout_height="@dimen/logo"
             android:id="@+id/imageView"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:src="@drawable/restaurant512" />
+            android:layout_marginTop="0dp"
+            android:src="@drawable/logo2" />
 
         <EditText
             android:layout_width="@dimen/edit_text"
             android:layout_height="wrap_content"
             android:id="@+id/editText"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:hint="@string/user"
+            android:layout_marginTop="10dp"
+            android:hint="@string/User"
             android:inputType="text" />
 
         <EditText
@@ -46,8 +46,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/editText2"
             android:layout_gravity="center_horizontal"
-            android:hint="@string/pass"
-            android:inputType="textPassword" />
+            android:hint="@string/Pass"
+            android:inputType="textPassword"
+            android:layout_marginTop="0dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -59,14 +60,15 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sign_up"
+            android:onClick="clickSignUp"
+            android:text="@string/Sign_up"
             android:id="@+id/button"
             android:layout_weight="1" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sign_in"
+            android:text="@string/Sign_in"
             android:id="@+id/button2"
             android:layout_weight="1" />
     </LinearLayout>
