--- a/app/src/main/res/layout/activity_my_service.xml
+++ b/app/src/main/res/layout/activity_my_service.xml
@@ -7,6 +7,55 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="appewtc.masterung.healthrecord.MyServiceActivity">
+    tools:context="appewtc.masterung.healthrecord.MyServiceActivity"
+    android:background="@drawable/wall">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/my_service"
+            android:id="@+id/textView11"
+            android:textSize="@dimen/h1"
+            android:textStyle="bold"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal" />
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="120dp"
+            android:onClick="clickDalySave"
+            android:id="@+id/imageView2"
+            android:layout_gravity="center_horizontal"
+            android:background="#96ffffff" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/save1"
+            android:id="@+id/textView12"
+            android:layout_gravity="center_horizontal"
+            android:textSize="@dimen/h2"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="120dp"
+            android:id="@+id/imageView3"
+            android:layout_gravity="center_horizontal"
+            android:background="#96ffffff" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/history"
+            android:id="@+id/textView13"
+            android:layout_gravity="center_horizontal"
+            android:textSize="@dimen/h2"
+            android:textStyle="bold" />
+    </LinearLayout>
 </RelativeLayout>
