--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -22,6 +22,16 @@
             android:layout_marginTop="@dimen/margin"
             android:layout_marginBottom="@dimen/margin" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/txtShowTime"
+            android:textSize="@dimen/h2"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/margin" />
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
