--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -100,7 +100,8 @@
                             android:id="@+id/editText"
                             android:layout_weight="2"
                             android:lines="3"
-                            android:gravity="top" />
+                            android:gravity="top"
+                            android:inputType="text" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -123,7 +124,8 @@
                             android:id="@+id/editText2"
                             android:layout_weight="2"
                             android:lines="3"
-                            android:gravity="top" />
+                            android:gravity="top"
+                            android:inputType="text" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -146,7 +148,8 @@
                             android:id="@+id/editText3"
                             android:layout_weight="2"
                             android:lines="3"
-                            android:gravity="top" />
+                            android:gravity="top"
+                            android:inputType="text" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -260,6 +263,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="clickSaveRecord"
         android:text="@string/save"
         android:id="@+id/button4"
         android:layout_alignParentBottom="true" />
