--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -192,7 +192,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:id="@+id/editText4"
-                        android:layout_weight="1" />
+                        android:layout_weight="1"
+                        android:inputType="numberDecimal" />
                 </LinearLayout>
 
                 <LinearLayout
